1、添加一些Item的自定义View 2、雷达样式的自定义View 3、底部Tab切换的TabsView 4、加入一个用于数学运算的工具类

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,13 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+
+    <color name="color_FFFFFF">#FFFFFF</color>
+    <color name="color_1E1E1E">#1E1E1E</color>
+    <color name="color_F5F5F5">#F5F5F5</color>
+    <color name="color_32DA9B">#32DA9B</color>
+    <color name="color_3AF2B6">#3AF2B6</color>
+    <color name="color_F85656">#F85656</color>
+    <color name="color_949494">#949494</color>
+
 </resources>
