1、新增多个自定义 View 2、公共的 ViewPagerAdapter 3、一些工具类

--- a/app/src/main/res/drawable/shape_red_sold_point.xml
+++ b/app/src/main/res/drawable/shape_red_sold_point.xml
@@ -4,6 +4,6 @@
     android:useLevel="false">
     <solid android:color="@color/color_F85656" />
     <stroke
-        android:width="@dimen/x_ui_px_2.0"
+        android:width="@dimen/dimen_1"
         android:color="@android:color/white" />
 </shape>
